# Invest-AI

./: .env.example  .gitignore  ANALYTICS.md  README.md  alembic.ini  alerts.sh  docker-compose.yml  geo-ctl.sh  pyproject.toml  up.sh
.agents/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md
.agents/auditor_m4_1/: BRIEFING.md  ORIGINAL_REQUEST.md  check_forensics.py  check_forensics_deep.py  handoff.md  progress.md
.agents/auditor_m5_1/: BRIEFING.md  ORIGINAL_REQUEST.md  ast_audit.py  check_fmt.py  full_forensic_diff.py  inspect_details.py  progress.md  verify_typer_app.py
.agents/auditor_nlp/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/auditor_nlp2_1/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/auditor_nlp_3/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  handoff.md  progress.md
.agents/auditor_nlp_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_processing_1/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  handoff.md  progress.md  readme.md
.agents/auditor_processing_2/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  check_make_full_text.py  handoff.md  progress.md
.agents/auditor_processing_3/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  handoff.md  progress.md
alembic/: env.py
config/: settings.py
deploy/: backup-pi-db.sh  geoapi.service
scripts/: README.md  augment_gold.py  build_aspect_dataset.py  build_dataset.py  build_market_dataset.py  build_temporal_dataset.py  clean_entity_links.py  db-init.sql  dedup_articles.py  diagnose_trader.py  download_models.sh  eval_alerts.py  eval_ask.py  eval_aspect.py  eval_events.py  eval_market_significance.py  eval_numeric.py  eval_significance.py  eval_temporal.py  llm_label.py  llm_label_aspect.py  llm_label_numeric.py  llm_label_temporal.py  telegram_login.py  train_lora.py
tests/: test_alerts.py  test_api.py  test_ask.py  test_aspect.py  test_attribution.py  test_backtest.py  test_bot.py  test_calendar.py  test_candlesticks.py  test_charts.py  test_composition.py  test_connectors.py  test_correlations.py  test_dataset.py  test_dates.py  test_digest.py  test_distillation.py  test_entity_linking.py  test_eval.py  test_events.py  test_factor_model.py  test_factors.py  test_forecast.py  test_forecasts.py  test_fundamental_factors.py  test_fundamentals.py  test_futrader_accumulate.py  test_futrader_continuous.py  test_futrader_conviction.py  test_futrader_decisions.py  test_futrader_depth.py  test_futrader_evaluation.py  test_futrader_execution.py  test_futrader_exits.py  test_futrader_features.py  test_futrader_kill_switch_flow.py  test_futrader_labeling.py  test_futrader_monitoring.py  test_futrader_paper.py  test_futrader_policy.py  (+58 more)
(+693 files in other folders)
